# distributed-kv

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: client_example.cpp
scripts/: build.sh  run_cluster.sh  test_cluster.sh
src/: main.cpp
src/config/: node1.conf  node2.conf  node3.conf
src/kvstore/: consistent_hash.cpp  consistent_hash.h  kv_store.cpp  kv_store.h
src/network/: message.cpp  message.h  network_manager.cpp  network_manager.h
src/persistence/: log_storage.cpp  log_storage.h  persistent_state.cpp  persistent_state.h
src/raft/: log_entry.cpp  log_entry.h  raft_node.cpp  raft_node.h  raft_state.cpp  raft_state.h
src/utils/: config.cpp  config.h  logger.cpp  logger.h
tests/: CMakeLists.txt
